<resources>
    <string name="app_name">MovieApp</string>
    <string name="send">Send</string>
    <string name="movie_title">Movie Title</string>
    <string name="duration">Duration</string>
    <string name="genre">Genre</string>
    <string name="poster_image">Movie poster image</string>
    <string name="release_date">Release Date</string>
    <string name="search">Search for movies</string>
    <string name="welcome">Welcome to the MovieApp</string>
    <string name="continue_screen">Continue</string>
    <string name="movie_details">Movie details</string>
    <string name="overview">Overview</string>
    <string name="browse">Browse our wide selection of movies </string>
</resources>